replaced fixed px spacing from nav and lauout

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -26,7 +26,7 @@ body {
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
 main {
-  width: 90%;
+  width: 75%;
   margin: 0 auto;
   background-color: white;
   padding-top: 140px;
